--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-Package            Version
------------------- -------
-asgiref            3.6.0
-backports.zoneinfo 0.2.1
-Django             4.1.7
-pip                23.0.1
-setuptools         47.1.0
-sqlparse           0.4.3
+beautifulsoup4==4.11.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
+idna==3.4
+pyTelegramBotAPI==4.10.0
+requests==2.28.2
+schedule==1.1.0
+soupsieve==2.4
+urllib3==1.26.14
+wikipedia==1.4.0
